buildscript {
	ext {
		queryDslVersion = "5.0.0"
		springDocVersion = "2.8.5"
		logbookVersion = "3.7.2"
		servletVersion = "6.0.0"
		jsonwebtokenVersion = "0.11.5"
	}
}

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.toyproject'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
//	implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'

	// JWT
	implementation "io.jsonwebtoken:jjwt-api:${jsonwebtokenVersion}"

	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// servlet
	implementation "jakarta.servlet:jakarta.servlet-api:${servletVersion}"

	//logbook
	implementation "org.zalando:logbook-spring-boot-starter:${logbookVersion}"

	//swagger
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springDocVersion}"

	// DB && jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.mariadb.jdbc:mariadb-java-client'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// queryDsl
	implementation"com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"

	// AWS
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.0'

	// thumbnail
	implementation 'net.coobird:thumbnailator:0.4.20'

	compileOnly("org.projectlombok:lombok", "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta") // 롬복 외에도 querydsl 어노테이션 추가

	annotationProcessor(
			"com.querydsl:querydsl-apt:${queryDslVersion}:jakarta",
			"jakarta.persistence:jakarta.persistence-api",
			"jakarta.annotation:jakarta.annotation-api"
	)



	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jsonwebtokenVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jsonwebtokenVersion}"
}

// QClass 생성 위치 지정
def querydslDir = "src/main/generated"

sourceSets {
	main.java.srcDirs += [ querydslDir ]
}

tasks.withType(JavaCompile) {
	// 인코딩 설정 (한글 깨짐 방지)
	options.encoding = 'UTF-8'
	// QClass 생성 경로 지정
	options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
}

clean {
	delete file(querydslDir)
}

tasks.named('bootBuildImage') {
	builder = 'paketobuildpacks/builder-jammy-base:latest'
}

tasks.named('test') {
	useJUnitPlatform()
}
